update(falco): update maintainers in Chart.yaml
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -15,5 +15,4 @@ icon: https://falco.org/images/logos/falco-logo.png
 sources:
   - https://github.com/falcosecurity/falco
 maintainers:
-  - name: nestorsalceda
-    email: nestor.salceda@sysdig.com
+  - email: cncf-falco-dev@lists.cncf.io
