docs(falco): correct instructions related to the new chart repository
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/Chart.yaml
+++ b/falco/Chart.yaml
@@ -15,4 +15,5 @@ icon: https://falco.org/images/logos/falco-logo.png
 sources:
   - https://github.com/falcosecurity/falco
 maintainers:
-  - email: cncf-falco-dev@lists.cncf.io
+  - name: The Falco Authors
+    email: cncf-falco-dev@lists.cncf.io
