--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -3,7 +3,7 @@
 image:
   registry: docker.io
   repository: falcosecurity/falco
-  tag: 0.23.0
+  tag: master # todo(leogr): replace with 0.24.0 once released
   pullPolicy: IfNotPresent
 
 docker:
@@ -236,20 +236,35 @@ falco:
     enabled: false
     url: http://some.url
 
-  # The gRPC server is secure by default (mutual TLS) so you need to generate certificates and update their paths here.
+  # Falco supports running a gRPC server with two main binding types
+  # 1. Over the network with mandatory mutual TLS authentication (mTLS)
+  # 2. Over a local unix socket with no authentication
+  # By default, the gRPC server is disabled, with no enabled services (see grpc_output)
+  # please comment/uncomment and change accordingly the options below to configure it.
+  # Important note: if Falco has any troubles creating the gRPC server
+  # this information will be logged, however the main Falco daemon will not be stopped.
+  # gRPC server over network with (mandatory) mutual TLS configuration.
+  # This gRPC server is secure by default so you need to generate certificates and update their paths here.
   # By default the gRPC server is off.
   # You can configure the address to bind and expose it.
   # By modifying the threadiness configuration you can fine-tune the number of threads (and context) it will use.
   grpc:
     enabled: false
-    listenPort: 5060
     threadiness: 8
+
+    # gRPC unix socket with no authentication
+    unixSocketPath: "unix:///var/run/falco/falco.sock"
+    
+    # gRPC over the network (mTLS) / required when unixSocketPath is empty
+    listenPort: 5060
     privateKey: "/etc/falco/certs/server.key"
     certChain: "/etc/falco/certs/server.crt"
     rootCerts: "/etc/falco/certs/ca.crt"
 
+  # gRPC output service.
   # By default it is off.
   # By enabling this all the output events will be kept in memory until you read them with a gRPC client.
+  # Make sure to have a consumer for them or leave this disabled.
   grpcOutput:
     enabled: false
 
