--- a/falco/templates/secret-certs.yaml
+++ b/falco/templates/secret-certs.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.falco.grpc.enabled }}
+{{- if and .Values.falco.grpc.enabled (not .Values.falco.grpc.unixSocketPath)}}
 ---
 apiVersion: v1
 kind: Secret
