fix(falco): add missing privileges for the apps Kubernetes API group
See https://github.com/falcosecurity/falco/pull/1136/files

Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/templates/clusterrole.yaml
+++ b/falco/templates/clusterrole.yaml
@@ -27,6 +27,17 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - apps
+    resources:
+      - daemonsets
+      - deployments
+      - replicasets
+      - statefulsets
+    verbs:
+      - get
+      - list
+      - watch
   - nonResourceURLs:
       - /healthz
       - /healthz/*
