Allow client config url for auditsink
Signed-off-by: Juan Sanchez <juan.sanchez1192@gmail.com>

--- a/falco/templates/auditsink.yaml
+++ b/falco/templates/auditsink.yaml
@@ -14,9 +14,13 @@ spec:
       qps: 10
       burst: 15
     clientConfig:
+      {{- if .Values.auditLog.dynamicBackend.url }}
+      url: {{ .Values.auditLog.dynamicBackend.url }}
+      {{- else }}
       service:
         namespace: {{ .Release.Namespace }}
         name: {{ template "falco.fullname" . }}
         port: {{ .Values.falco.webserver.listenPort }}
         path: {{ .Values.falco.webserver.k8sAuditEndpoint }}
+      {{- end }}
 {{- end }}
