--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -89,6 +89,9 @@ auditLog:
   dynamicBackend:
     # true here configures an AuditSink who will receive the K8s audit logs
     enabled: false
+    # define if auditsink client config should point to a fixed url, not the
+    # default webserver service
+    url: ""
 
 falco:
   # The location of the rules file(s). This can contain one or more paths to
