--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ workflows:
   release:
     jobs:
       - release-charts:
+          context: falco
           filters:
             tags:
               ignore: /.*/
