update(falco): switch to new event-generator
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -45,6 +45,10 @@ serviceAccount:
 
 fakeEventGenerator:
   enabled: false
+  args:
+    - run
+    - --loop
+    - ^syscall
   replicas: 1
 
 daemonset:
