--- a/falco/templates/deployment.yaml
+++ b/falco/templates/deployment.yaml
@@ -10,6 +10,9 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   replicas:  {{ .Values.fakeEventGenerator.replicas }}
+  selector:
+    matchLabels:
+      app: {{ template "falco.fullname" . }}-event-generator
   template:
     metadata:
       labels:
@@ -17,5 +20,9 @@ spec:
     spec:
       containers:
       - name: {{ template "falco.fullname" . }}-event-generator
-        image: sysdig/falco-event-generator:latest
+        image: falcosecurity/event-generator:latest
+{{- with .Values.fakeEventGenerator.args }}
+        args:
+{{ toYaml . | indent 10 }}
+{{- end }}
 {{- end }}
