update(falco): upgrade to Falco 0.24.0
Signed-off-by: Leonardo Grasso <me@leonardograsso.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -3,7 +3,7 @@
 image:
   registry: docker.io
   repository: falcosecurity/falco
-  tag: master # todo(leogr): replace with 0.24.0 once released
+  tag: 0.24.0
   pullPolicy: IfNotPresent
 
 docker:
