Add SCC to support Openshift
Add changes in CHANGELOG and update README.md

Signed-off-by: Alvaro Iradier <alvaro.iradier@sysdig.com>

--- a/falco/values.yaml
+++ b/falco/values.yaml
@@ -337,3 +337,7 @@ integrations:
 tolerations:
   - effect: NoSchedule
     key: node-role.kubernetes.io/master
+
+scc:
+  # true here enabled creation of Security Context Constraints in Openshift
+  create: true
