--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -15,7 +15,7 @@ service:
 
 image:
   repository: falcosecurity/falco-exporter
-  tag: latest
+  tag: 0.3.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
