--- a/falco/templates/configmap.yaml
+++ b/falco/templates/configmap.yaml
@@ -187,7 +187,7 @@ data:
       enabled: {{ .Values.falco.grpc.enabled }}
       threadiness: {{ .Values.falco.grpc.threadiness }}
       {{- if .Values.falco.grpc.unixSocketPath }}
-      bind_address: "{{ .Values.falco.grpc.unixSocketPath }}"
+      bind_address: "{{ include "falco.unixSocketPathWithPrefix" . }}"
       {{ else }}
       bind_address: "0.0.0.0:{{ .Values.falco.grpc.listenPort }}"
       private_key: {{ .Values.falco.grpc.privateKey }}
