--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -66,3 +66,13 @@ tolerations:
     key: node-role.kubernetes.io/master
 
 affinity: {}
+
+serviceMonitor:
+  # Enable the deployment of a Service Monitor for the Prometheus Operator.
+  enabled: false
+  # Specify Additional labels to be added on the Service Monitor.
+  additionalLabels: {}
+  # Specify a user defined interval. When not specified Prometheus default interval is used.
+  interval: ""
+  # Specify a user defined scrape timeout. When not specified Prometheus default scrape timeout is used.
+  scrapeTimeout: ""
