fix lint for Chart.yaml
Signed-off-by: Issif <issif_github@gadz.org>

--- a/falcosidekick/Chart.yaml
+++ b/falcosidekick/Chart.yaml
@@ -8,8 +8,7 @@ keywords:
   - monitoring
   - security
   - alerting
-home:
-  - https://github.com/falcosecurity/falcosidekick
+home: https://github.com/falcosecurity/falcosidekick
 sources:
   - https://github.com/falcosecurity/falcosidekick 
 maintainers:
