--- a/falco/templates/secret-certs.yaml
+++ b/falco/templates/secret-certs.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.falco.grpc.enabled (not .Values.falco.grpc.unixSocketPath)}}
+{{- if or .Values.falco.webserver.sslEnabled (and .Values.falco.grpc.enabled (not .Values.falco.grpc.unixSocketPath)) }}
 ---
 apiVersion: v1
 kind: Secret
@@ -12,7 +12,10 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  server.key: {{ .Values.certs.server.key | b64enc | quote }}
-  server.crt: {{ .Values.certs.server.crt | b64enc | quote }}
+  {{ $key := .Values.certs.server.key }}
+  server.key: {{ $key | b64enc | quote }}
+  {{ $crt := .Values.certs.server.crt }}
+  server.crt: {{ $crt | b64enc | quote }}
+  server.pem: {{ print $key $crt | b64enc | quote }}
   ca.crt: {{ .Values.certs.ca.crt | b64enc | quote }}
 {{- end }}
