--- a/falco/templates/daemonset.yaml
+++ b/falco/templates/daemonset.yaml
@@ -128,7 +128,7 @@ spec:
               name: rules-volume
             {{- end }}
             {{- if (or .Values.integrations.natsOutput.enabled .Values.integrations.snsOutput.enabled .Values.integrations.pubsubOutput.enabled) }}
-            - mountPath: /var/run/falco/
+            - mountPath: /tmp/shared-pipe/
               name: shared-pipe
               readOnly: false
             {{- end }}
@@ -146,18 +146,18 @@ spec:
         - name: {{ .Chart.Name }}-nats
           image: sysdig/falco-nats:latest
           imagePullPolicy: Always
-          args: [ "/bin/falco-nats", "-s", {{ .Values.integrations.natsOutput.natsUrl | quote }}]
+          args: [ "/bin/falco-nats", "-s", {{ .Values.integrations.natsOutput.natsUrl | quote }}, "-f", "/tmp/shared-pipe/nats"]
           volumeMounts:
-            - mountPath: /var/run/falco/
+            - mountPath: /tmp/shared-pipe/
               name: shared-pipe
       {{- end }}
       {{- if .Values.integrations.snsOutput.enabled }}
         - name: {{ .Chart.Name }}-sns
           image: sysdig/falco-sns:latest
           imagePullPolicy: Always
-          args: [ "/bin/falco-sns", "-t", {{ .Values.integrations.snsOutput.topic | quote }}]
+          args: [ "/bin/falco-sns", "-t", {{ .Values.integrations.snsOutput.topic | quote }}, "-f", "/tmp/shared-pipe/nats"]
           volumeMounts:
-            - mountPath: /var/run/falco/
+            - mountPath: /tmp/shared-pipe/
               name: shared-pipe
           env:
             - name: AWS_ACCESS_KEY_ID
@@ -180,9 +180,9 @@ spec:
         - name: {{ .Chart.Name }}-pubsub
           image: sysdiglabs/falco-pubsub:latest
           imagePullPolicy: Always
-          args: [ "/bin/falco-pubsub", "-t", {{ .Values.integrations.pubsubOutput.topic | quote }}]
+          args: [ "/bin/falco-pubsub", "-t", {{ .Values.integrations.pubsubOutput.topic | quote }}, "-f", "/tmp/shared-pipe/nats"]
           volumeMounts:
-            - mountPath: /var/run/falco/
+            - mountPath: /tmp/shared-pipe/
               name: shared-pipe
           env:
             - name: GOOGLE_PROJECT_ID
@@ -200,9 +200,9 @@ spec:
       initContainers:
           - name: init-pipe
             image: busybox
-            command: ['mkfifo','/var/run/falco/nats']
+            command: ['mkfifo','/tmp/shared-pipe/nats']
             volumeMounts:
-            - mountPath: /var/run/falco/
+            - mountPath: /tmp/shared-pipe/
               name: shared-pipe
               readOnly: false
       {{- end }}
