Azure identity >=1.6.0 CRD fields are case sensitive
Signed-off-by: Annegies van 't Zand <ace.vtzand@gmail.com>

--- a/falcosidekick/templates/aadpodidentity.yaml
+++ b/falcosidekick/templates/aadpodidentity.yaml
@@ -5,15 +5,15 @@ metadata:
   name: falcosidekick
 spec:
   type: 0
-  ResourceID: /subscriptions/{{ .Values.config.azure.subscriptionID }}/resourcegroups/{{ .Values.config.azure.resourceGroupName }}/providers/Microsoft.ManagedIdentity/userAssignedIdentities/{{ .Values.config.azure.podIdentityName }}
-  ClientID: {{ .Values.config.azure.podIdentityClientID }}
+  resourceID: /subscriptions/{{ .Values.config.azure.subscriptionID }}/resourcegroups/{{ .Values.config.azure.resourceGroupName }}/providers/Microsoft.ManagedIdentity/userAssignedIdentities/{{ .Values.config.azure.podIdentityName }}
+  clientID: {{ .Values.config.azure.podIdentityClientID }}
 ---
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzureIdentityBinding
 metadata:
   name: falcosidekick
 spec:
-  AzureIdentity: falcosidekick
-  Selector: {{ include "falcosidekick.fullname" . }}
+  azureIdentity: falcosidekick
+  selector: {{ include "falcosidekick.fullname" . }}
 
 {{- end }}
