--- a/falcosidekick/values.yaml
+++ b/falcosidekick/values.yaml
@@ -9,6 +9,10 @@ image:
   tag: 2.13.0
   pullPolicy: IfNotPresent
 
+# One or more secrets to be used when pulling images
+imagePullSecrets: []
+# - registrySecretName
+
 nameOverride: ""
 fullnameOverride: ""
 
