--- a/falco/templates/secret-certs.yaml
+++ b/falco/templates/secret-certs.yaml
@@ -11,7 +11,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  server.key: {{ .Values.certs.server.key | b64enc | quote }}
-  server.crt: {{ .Values.certs.server.crt | b64enc | quote }}
-  ca.crt: {{ .Values.certs.ca.crt | b64enc | quote }}
+  server.key: {{ .Values.grpc.privateKey | b64enc | quote }}
+  server.crt: {{ .Values.grpc.certChain | b64enc | quote }}
+  ca.crt: {{ .Values.grpc.rootCerts | b64enc | quote }}
 {{- end }}
