--- a/falco/templates/secret-certs.yaml
+++ b/falco/templates/secret-certs.yaml
@@ -14,5 +14,4 @@ data:
   server.key: {{ .Values.grpc.privateKey | b64enc | quote }}
   server.crt: {{ .Values.grpc.certChain | b64enc | quote }}
   ca.crt: {{ .Values.grpc.rootCerts | b64enc | quote }}
-{{- end }}
-#
+{{- end }}`
