--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -66,3 +66,8 @@ tolerations:
     key: node-role.kubernetes.io/master
 
 affinity: {}
+
+grafanaDashboard:
+  enabled: false
+  namespace: default
+  datasource: Prometheus
