--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -67,12 +67,7 @@ tolerations:
 
 affinity: {}
 
-serviceMonitor:
-  # Enable the deployment of a Service Monitor for the Prometheus Operator.
+grafanaDashboard:
   enabled: false
-  # Specify Additional labels to be added on the Service Monitor.
-  additionalLabels: {}
-  # Specify a user defined interval. When not specified Prometheus default interval is used.
-  interval: ""
-  # Specify a user defined scrape timeout. When not specified Prometheus default scrape timeout is used.
-  scrapeTimeout: ""
+  namespace: default
+  datasource: Prometheus
