--- a/falco-exporter/values.yaml
+++ b/falco-exporter/values.yaml
@@ -67,6 +67,15 @@ tolerations:
 
 affinity: {}
 
+serviceMonitor:
+  enabled: false
+  # Specify Additional labels to be added on the Service Monitor.
+  additionalLabels: {}
+  # Specify a user defined interval. When not specified Prometheus default interval is used.
+  interval: ""
+  # Specify a user defined scrape timeout. When not specified Prometheus default scrape timeout is used.
+  scrapeTimeout: ""
+
 grafanaDashboard:
   enabled: false
   namespace: default
